Update confluence/base/bin/setenv.sh
    * Do not source confluence/base/bin/setenv.sh

        Do not use setenv.sh script shipped by atlassian
        as it introduce confusion, between args define in confluence/base/bin/setenv.sh
        and confluence/site/bin/setenv.sh

    * Increase max java heap size to 8GB